# Solferino

./: .gitignore  .gitmodules  CMakeLists.txt  match.sh  pack.sh
assets/models/: car0.vox  road.vox
assets/models/cars/: Car_Basic_0.glb  Car_Basic_1.glb  Car_Basic_2.glb  Car_Basic_3.glb  Car_Basic_4.glb  Car_Basic_5.glb  Car_Basic_6.glb  Car_Basic_7.glb  Car_Basic_8.glb  Car_Basic_9.glb  Car_Long_0.glb  Car_Long_1.glb  Car_Long_2.glb  Car_Long_3.glb  Car_Long_4.glb  Car_Long_5.glb  Car_Long_6.glb  Car_Long_7.glb  Car_Pickup_0.glb  Car_Pickup_1.glb  Car_Pickup_2.glb  Car_Pickup_3.glb  Car_Pickup_4.glb  Car_Pickup_5.glb  Car_Police_0.glb  Car_Police_1.glb
assets/shaders/: test.vs
shader/: shader.frag  shader.vert
src/: CMakeLists.txt  MyApplication.cpp  MyApplication.hpp  main.cpp
src/agents/: CMakeLists.txt  Car.cpp  Car.hpp  TrafficLights.cpp  TrafficLights.hpp  Vehicle.cpp  Vehicle.hpp
src/imgui/: imgui.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
src/pathfinding/: CMakeLists.txt  Graph.cpp  Graph.hpp  Link.cpp  Link.hpp  Node.cpp  Node.hpp
src/ui/: CustomCamera.cpp  CustomCamera.hpp  UI.cpp  UI.hpp
src/util/: Application.cpp  Application.hpp  CMakeLists.txt  Misc.cpp  Misc.hpp  Shader.cpp  Shader.hpp  Vec2.cpp  Vec2.hpp  glError.cpp  glError.hpp
